<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_apertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFondoAperturas"
            >

            <ImageView
                android:id="@+id/img_apertura"
                android:layout_width="@dimen/h_150"
                android:layout_height="@dimen/w_150"
                android:contentDescription="@string/foto_ejemplo_apertura"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/nombre_apertura"
                style="@style/subtitulos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:text="@string/nombre_apertura_default"
                app:layout_constraintStart_toEndOf="@+id/img_apertura"
                android:layout_marginStart="@dimen/margin_8"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/codigo_eco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo_eco_general_apertura_default"
                app:layout_constraintStart_toStartOf="@+id/nombre_apertura"
                app:layout_constraintTop_toBottomOf="@+id/nombre_apertura"
                android:layout_marginTop="@dimen/margin_6"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/partidas_jugadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_6"
                android:text="@string/num_partidas_apertura_default"
                app:layout_constraintStart_toEndOf="@+id/codigo_eco"
                app:layout_constraintTop_toBottomOf="@+id/nombre_apertura"
                android:layout_marginStart="@dimen/margin_20"
                android:textColor="@color/black"

                />

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/descripcion_apertura_default"

                app:layout_constraintStart_toEndOf="@+id/img_apertura"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@id/codigo_eco"
                android:layout_margin="@dimen/margin_8"
                android:textColor="@color/black"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>