<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_16"
    app:cardCornerRadius="@dimen/padding_16"
    app:cardElevation="@dimen/elevation_8"
    app:cardBackgroundColor="@color/bottom_app_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/que_es_el_codigo_eco"
            android:textStyle="bold"
            android:textSize="@dimen/text_26"
            android:gravity="center"
            android:textColor="@color/lightGrayColor"
            android:paddingBottom="@dimen/padding_8"
            style="@style/titulos"
            />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/definicion_eco"
            android:textSize="@dimen/text_16"
            android:gravity="center"
            android:textColor="@color/lightGrayColor" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:layout_gravity="center"
            android:textColor="@color/bottom_app_bar"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:backgroundTint="@color/lightGrayColor"
            android:layout_marginTop="@dimen/margin_16"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>
